--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
-# This file tells Netlify how to build and deploy your site.
 [build]
-  # This command is a placeholder to ensure Netlify runs a build step,
-  # which is necessary for environment variable injection.
-  command = "echo 'Netlify build triggered for variable injection'"
-  # The 'publish' directory is the root of your repository, where index.html and other assets reside.
+  command = """
+  sed -i 's|%%FIREBASE_API_KEY%%|'\"$FIREBASE_API_KEY\"'|g' js/main.js && \
+  sed -i 's|%%FIREBASE_AUTH_DOMAIN%%|'\"$FIREBASE_AUTH_DOMAIN\"'|g' js/main.js && \
+  sed -i 's|%%FIREBASE_PROJECT_ID%%|'\"$FIREBASE_PROJECT_ID\"'|g' js/main.js && \
+  sed -i 's|%%FIREBASE_STORAGE_BUCKET%%|'\"$FIREBASE_STORAGE_BUCKET\"'|g' js/main.js && \
+  sed -i 's|%%FIREBASE_MESSAGING_SENDER_ID%%|'\"$FIREBASE_MESSAGING_SENDER_ID\"'|g' js/main.js && \
+  sed -i 's|%%FIREBASE_APP_ID%%|'\"$FIREBASE_APP_ID\"'|g' js/main.js
   publish = "."
